--- a/styles/career_cv.css
+++ b/styles/career_cv.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  /* width: 100%; */
   margin-top: 15px;
 }
 
